Fix clock not fitting when having 2 digit minutes

--- a/frontend/src/styles/Clock.scss
+++ b/frontend/src/styles/Clock.scss
@@ -62,7 +62,7 @@
     color: var(--time-color);
 
     &__minutes {
-      width: 1ch;
+      width: 2ch;
       text-align: right;
     }
 
